maj livres Noel + nouveaux

--- a/livres.html
+++ b/livres.html
@@ -68,16 +68,16 @@
 
     <!--Livre 4-->
     <figure>
-      <a href="https://www.amazon.fr/Dos-au-mur-Nicolas-Rey/dp/B077R4K24R/ref=sr_1_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=nicolas+rey&qid=1555280726&s=gateway&sr=8-2" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/41cWpHMxaZL.jpg" alt="Dos au Mur" class="books" /></a>
+      <a href="https://www.amazon.fr/tempo-calcio-valgono-stesse-regole/dp/8832963043/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1609030312&sr=8-2" target="_blank"> <img
+          src="https://images-na.ssl-images-amazon.com/images/I/815Jn4vXFBL.jpg" alt="Il mio terzo tempo" class="books" /></a>
       <figcaption>
-        Nicolas Rey
+        Claudio Marchisio
       </figcaption>
       <figcaption>
-        Dos au Mur
+        Il mio terzo tempo
       </figcaption>
       <figcaption>
-        18,00€
+        15,00€
       </figcaption>
     </figure>
   </div>
@@ -209,19 +209,16 @@
   <div class="booksLine">
     <!--Livre 13-->
     <figure>
-      <a href="https://www.amazon.fr/tr%C3%B4ne-fer-Lint%C3%A9grale-3/dp/2756408409/ref=pd_sim_14_5/257-1218540-6150940?_encoding=UTF8&pd_rd_i=2756408409&pd_rd_r=3f9c3e44-5f05-11e9-9ab7-adaade3fec5d&pd_rd_w=WTIGB&pd_rd_wg=Xc3GJ&pf_rd_p=7e133c34-2a2a-4f4f-8372-6a26c70ca073&pf_rd_r=DY62KACJE73J3FTNY187&psc=1&refRID=DY62KACJE73J3FTNY187"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71eJOV0hFPL.jpg" alt="L'intégrale du Trône de Fer - Partie 3" class="books" /></a>
+      <a href="https://www.amazon.fr/difensore-perfetto-Giorgio-Chiellini/dp/8820068753/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=&sr="
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71QhPK3wfEL.jpg" alt="Io, Giorgio" class="books" /></a>
       <figcaption>
-        George R.R. Martin
+        Giorgio Chiellini
       </figcaption>
       <figcaption>
-        Le Trône de Fer
+        Io, Giorgio
       </figcaption>
       <figcaption>
-        L'intégrale - Partie 3
-      </figcaption>
-      <figcaption>
-        22,90€
+        18,90€
       </figcaption>
     </figure>
 
@@ -280,16 +277,16 @@
   <div class="booksLine">
     <!--Livre 17-->
     <figure>
-      <a href="https://www.amazon.fr/Tendre-est-nuit-Scott-Fitzgerald/dp/2253052299/ref=sr_1_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=fitzgerald&qid=1555427512&s=gateway&sr=8-2" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/517sBNNkPyL.jpg" alt="Tendre Est La Nuit" class="books" /></a>
+      <a href="https://www.amazon.fr/Grand-hotel-calciomercato-segreti-mercato/dp/8830901180/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=&sr=" target="_blank"> <img
+          src="https://images-na.ssl-images-amazon.com/images/I/71C37ytThlL.jpg" alt="Grand hotel calciomercato" class="books" /></a>
       <figcaption>
-        Francis Scott Fitzgerald
+        Gianluca Di Marzio
       </figcaption>
       <figcaption>
-        Tendre est la nuit
+        Grand hotel calciomercato
       </figcaption>
       <figcaption>
-        7,20€
+        17,00€
       </figcaption>
     </figure>
 
@@ -385,20 +382,20 @@
       </figcaption>
     </figure>
 
-    <!--Livre 24
+    <!--Livre 24-->
     <figure>
-      <a href="https://www.amazon.fr/Narthex-Marien-Defalvard/dp/2912969751/ref=sr_1_fkmrnull_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=1CV3OFUXP4CZH&keywords=marien+defalvard&qid=1556834799&s=gateway&sprefix=marien+d%2Cvideogames%2C136&sr=8-2-fkmrnull"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/41W9LcfYRCL.jpg" alt="Defalvard" class="books" /></a>
+      <a href="https://www.amazon.fr/Eric-Dupond-Moretti-%C3%A0-barre-Dupond-moretti/dp/2749940303/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=QHL0UOYOMM43&dchild=1&keywords=dupont+moretti&qid=1609030877&sprefix=dupont+mo%2Caps%2C157&sr=8-1"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81KWzOF98SL.jpg" alt="Defalvard" class="books" /></a>
       <figcaption>
-        Marien Defalvard
+        Éric Dupond-Moretti
       </figcaption>
       <figcaption>
-        Narthex
+        A la barre
       </figcaption>
       <figcaption>
-        Rupture de stock sur Amazon
+        10,00
       </figcaption>
-    </figure>-->
+    </figure>
   </div>
 
   <div class="booksLine">
@@ -469,16 +466,16 @@
   <div class="booksLine">
     <!--Livre 29-->
     <figure>
-      <a href="https://www.amazon.fr/Une-f%C3%AAte-larmes-Jean-dOrmesson/dp/2221104838/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1559690607&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/616i319%2BbML.jpg"
+      <a href="https://www.amazon.fr/dictionnaire-ma-vie-Eric-Dupond-Moretti/dp/2290173959/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1609030877&sr=8-2" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61Mvw3X3V3L.jpg"
           alt="Une fête en larmes" class="books" /></a>
       <figcaption>
-        Jean d'Ormesson
+        Eric Dupond-Moretti
       </figcaption>
       <figcaption>
-        Une fête en larmes
+        Le dictionnaire de ma vie
       </figcaption>
       <figcaption>
-        20,50€
+        6,70€
       </figcaption>
     </figure>
 
@@ -653,16 +650,16 @@
 
     <!--Livre 40-->
     <figure>
-      <a href="https://www.amazon.fr/Radiographie-Laurent-Ruquier/dp/2253185795/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=ruquier&qid=1559755187&s=books&sr=1-1" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/81AYOwT7rbL.jpg" alt="Radiographie" class="books" /></a>
+      <a href="https://www.amazon.fr/Directs-du-droit-Eric-Dupond-Moretti/dp/2290153842/ref=sr_1_3?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=QHL0UOYOMM43&dchild=1&keywords=dupont+moretti&qid=1609030877&sprefix=dupont+mo%2Caps%2C157&sr=8-3" target="_blank"> <img
+          src="https://images-na.ssl-images-amazon.com/images/I/61wHFkMW4-L.jpg" alt="Directs du droit" class="books" /></a>
       <figcaption>
-        Laurent Ruquier
+        Eric Dupond-Moretti
       </figcaption>
       <figcaption>
-        Radiographie
+        Directs du droit
       </figcaption>
       <figcaption>
-        6,90€
+        6,70€
       </figcaption>
     </figure>
   </div>
@@ -715,16 +712,16 @@
 
     <!--Livre 44-->
     <figure>
-      <a href="https://www.amazon.fr/B%C3%AAte-noire-Condamn%C3%A9-%C3%A0-plaider/dp/2290059749/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1573229678&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61Xhar-nxKL.jpg"
+      <a href="https://www.amazon.fr/droit-d%C3%AAtre-libre-Dialogue-Denis/dp/2290210021/ref=sr_1_7?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=QHL0UOYOMM43&dchild=1&keywords=dupont+moretti&qid=1609030877&sprefix=dupont+mo%2Caps%2C157&sr=8-7" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61SmyNiz89L.jpg"
           alt="Dupond Moretti" class="books" /></a>
       <figcaption>
         Eric Dupond-Moretti
       </figcaption>
       <figcaption>
-        Bête noire : "Condamné à plaider"
+        Le droit d'être libre
       </figcaption>
       <figcaption>
-        7,00€
+        6,30€
       </figcaption>
     </figure>
   </div>
@@ -1131,7 +1128,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 71-->
+    <!--Livre 71
     <figure>
       <a href="https://www.amazon.fr/Une-terre-promise-Barack-Obama/dp/2213706123/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=obama&qid=1605217436&sr=8-1" target="_blank"> <img
           src="https://images-na.ssl-images-amazon.com/images/I/91UkKsuMIOL.jpg" alt="Obama" class="books" /></a>
@@ -1144,7 +1141,7 @@
       <figcaption>
         32,00€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 72-->
     <figure>
@@ -1518,20 +1515,20 @@
       </figcaption>
     </figure>
 
-    <!--Livre 92
+    <!--Livre 92-->
     <figure>
-      <a href="https://www.amazon.fr/Lanomalie-Herv%C3%A9-Tellier/dp/207289509X/ref=sr_1_27?dchild=1&pf_rd_i=301061&pf_rd_p=2ae9d274-f85d-5302-a065-2b44b53e1f4d&pf_rd_r=BSAZRBNJCDJ4GGVZ9Q23&pf_rd_s=merchandised-search-10&pf_rd_t=BROWSE&qid=1605406820&refinements=p_72%3A184904031&s=books&sr=1-27" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71+cmO5-RgL.jpg"
-          alt="L’anomalie" class="books" /></a>
+      <a href="https://www.amazon.fr/3000-giorni-Juve-campione-dItalia/dp/8893883562/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1606989650&sr=8-2" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71Dys+JGVkL.jpg"
+          alt="3000 giorni" class="books" /></a>
       <figcaption>
-        Hervé Le Tellier
+        Massimo Zampini
       </figcaption>
       <figcaption>
-        L’anomalie
+        3000 giorni con la Juve campione d'Italia
       </figcaption>
       <figcaption>
-        20,00€
+        18,00€
       </figcaption>
-    </figure>-->
+    </figure>
   </div>
 
 </body>
