--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </div>
 
   <p class="dateMAJ">
-    Mise à jour liste le 22 novembre 2020
+    Mise à jour liste le 27 décembre 2020
   </p>
   <p class="dateMAJ2">
     Mise à jour prix le 22 novembre 2020
