--- a/jeuxvideo.html
+++ b/jeuxvideo.html
@@ -33,7 +33,7 @@
       </figcaption>
     </figure>-->
 
-    <!--Jeu 2-->
+    <!--Jeu 2
     <figure>
       <a href="#" target="_blank"> <img src="https://s1.gaming-cdn.com/images/products/7383/271x377/football-manager-2021-cover.jpg" alt="NBA 2K21" class="game" /></a>
       <figcaption>
@@ -45,7 +45,7 @@
       <figcaption>
         commander moi même sur instang gaming
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Jeu 3
     <figure>
