--- a/autres.html
+++ b/autres.html
@@ -23,25 +23,25 @@
   <div class="othersLine">
     <!--Autres 1
     <figure>
-      <a href="https://www.amazon.fr/AUKEY-Microphone-Enregistrement-Compatible-Windows/dp/B0721MKXQ2/ref=cm_cr_arp_d_product_top?ie=UTF8" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/51NaTEP5xbL._AC_SL1500_.jpg"
-          alt="Webcam" class="others" /></a>
+      <a href="https://www.amazon.fr/Kaamelott-Livres-lInt%C3%A9grale-s%C3%A9rie-Blu-ray/dp/B07F576MSG/?_encoding=UTF8&pd_rd_w=SlLqP&pf_rd_p=9c892acd-7567-4862-a77a-6ab6f5960ea7&pf_rd_r=H104HHPJPWY4VC3JYMHZ&pd_rd_r=9ff2c9ee-5959-4f8a-91d3-822cb4342857&pd_rd_wg=WvcTS&ref_=pd_gw_crs_zg_bs_405322" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61QFDgac5dL._AC_SL1000_.jpg"
+          alt="Kaamelott" class="others" /></a>
       <figcaption>
-        Webcam pour streamer
+        Kaamelott - l'intégrale en BluRay
       </figcaption>
       <figcaption>
-        49,99€
+        91,57€
       </figcaption>
     </figure>-->
 
     <!--Autres 2
     <figure>
-      <a href="https://www.amazon.fr/Blue-Microphones-SYktcjgs-Microphone-Carmin/dp/B07W7KHB9J/ref=sr_1_3?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=blue+yeti&qid=1593612365&sr=8-3" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/716wsV19mZL._AC_SL1500_.jpg" alt="Micro Blue Yeti" class="others" /></a>
+      <a href="https://www.amazon.fr/Thrones-Tr%C3%B4ne-Lint%C3%A9grale-Saisons-Blu-Ray/dp/B07SZBK3WR/?_encoding=UTF8&pd_rd_w=SlLqP&pf_rd_p=9c892acd-7567-4862-a77a-6ab6f5960ea7&pf_rd_r=H104HHPJPWY4VC3JYMHZ&pd_rd_r=9ff2c9ee-5959-4f8a-91d3-822cb4342857&pd_rd_wg=WvcTS&ref_=pd_gw_crs_zg_bs_405322" target="_blank"> <img
+          src="https://images-na.ssl-images-amazon.com/images/I/715rGsf7GtL._AC_SL1000_.jpg" alt="GoT" class="others" /></a>
       <figcaption>
-        Micro Blue Yeti pour streamer
+        Game of Thrones - l'intégrale en BluRay
       </figcaption>
       <figcaption>
-        139,99€
+        111,99€
       </figcaption>
     </figure>-->
 
