--- a/livres.html
+++ b/livres.html
@@ -68,8 +68,8 @@
 
     <!--Livre 4-->
     <figure>
-      <a href="https://www.amazon.fr/tempo-calcio-valgono-stesse-regole/dp/8832963043/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1609030312&sr=8-2" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/815Jn4vXFBL.jpg" alt="Il mio terzo tempo" class="books" /></a>
+      <a href="https://www.amazon.fr/tempo-calcio-valgono-stesse-regole/dp/8832963043/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1609030312&sr=8-2" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/815Jn4vXFBL.jpg"
+          alt="Il mio terzo tempo" class="books" /></a>
       <figcaption>
         Claudio Marchisio
       </figcaption>
@@ -209,8 +209,8 @@
   <div class="booksLine">
     <!--Livre 13-->
     <figure>
-      <a href="https://www.amazon.fr/difensore-perfetto-Giorgio-Chiellini/dp/8820068753/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=&sr="
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71QhPK3wfEL.jpg" alt="Io, Giorgio" class="books" /></a>
+      <a href="https://www.amazon.fr/difensore-perfetto-Giorgio-Chiellini/dp/8820068753/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=&sr=" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71QhPK3wfEL.jpg" alt="Io, Giorgio"
+          class="books" /></a>
       <figcaption>
         Giorgio Chiellini
       </figcaption>
@@ -277,8 +277,8 @@
   <div class="booksLine">
     <!--Livre 17-->
     <figure>
-      <a href="https://www.amazon.fr/Grand-hotel-calciomercato-segreti-mercato/dp/8830901180/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=&sr=" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/71C37ytThlL.jpg" alt="Grand hotel calciomercato" class="books" /></a>
+      <a href="https://www.amazon.fr/Grand-hotel-calciomercato-segreti-mercato/dp/8830901180/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=&sr=" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71C37ytThlL.jpg"
+          alt="Grand hotel calciomercato" class="books" /></a>
       <figcaption>
         Gianluca Di Marzio
       </figcaption>
@@ -650,8 +650,8 @@
 
     <!--Livre 40-->
     <figure>
-      <a href="https://www.amazon.fr/Directs-du-droit-Eric-Dupond-Moretti/dp/2290153842/ref=sr_1_3?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=QHL0UOYOMM43&dchild=1&keywords=dupont+moretti&qid=1609030877&sprefix=dupont+mo%2Caps%2C157&sr=8-3" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/61wHFkMW4-L.jpg" alt="Directs du droit" class="books" /></a>
+      <a href="https://www.amazon.fr/Directs-du-droit-Eric-Dupond-Moretti/dp/2290153842/ref=sr_1_3?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=QHL0UOYOMM43&dchild=1&keywords=dupont+moretti&qid=1609030877&sprefix=dupont+mo%2Caps%2C157&sr=8-3"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61wHFkMW4-L.jpg" alt="Directs du droit" class="books" /></a>
       <figcaption>
         Eric Dupond-Moretti
       </figcaption>
@@ -712,8 +712,8 @@
 
     <!--Livre 44-->
     <figure>
-      <a href="https://www.amazon.fr/droit-d%C3%AAtre-libre-Dialogue-Denis/dp/2290210021/ref=sr_1_7?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=QHL0UOYOMM43&dchild=1&keywords=dupont+moretti&qid=1609030877&sprefix=dupont+mo%2Caps%2C157&sr=8-7" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61SmyNiz89L.jpg"
-          alt="Dupond Moretti" class="books" /></a>
+      <a href="https://www.amazon.fr/droit-d%C3%AAtre-libre-Dialogue-Denis/dp/2290210021/ref=sr_1_7?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=QHL0UOYOMM43&dchild=1&keywords=dupont+moretti&qid=1609030877&sprefix=dupont+mo%2Caps%2C157&sr=8-7"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61SmyNiz89L.jpg" alt="Dupond Moretti" class="books" /></a>
       <figcaption>
         Eric Dupond-Moretti
       </figcaption>
