--- a/livres.html
+++ b/livres.html
@@ -1309,97 +1309,97 @@
       </figcaption>
     </figure>
 
-    <!--Livre 83
+    <!--Livre 83-->
     <figure>
-      <a href="https://www.amazon.fr/DERNIERS-JUGEMENTS-AVANT-LIQUIDATION-magistrature/dp/2226238719/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1594512282&sr=8-4" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/41sJL99ZhUL.jpg" alt="Derniers jugements avant liquidation" class="books" /></a>
+      <a href="https://www.amazon.fr/Si-%C3%A7a-saigne-Stephen-King/dp/2226451056/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=1FH5YNL5U4ZVH&dchild=1&keywords=si+%C3%A7a+saigne+stephen+king&qid=1613398702&sprefix=si+%C3%A7a+%2Caps%2C156&sr=8-1"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81+5tjtuBBL.jpg" alt="Stephen King" class="books" /></a>
       <figcaption>
-        Gilbert Thiel
+        Stephen King
       </figcaption>
       <figcaption>
-        Derniers jugements avant liquidation
+        Si ça saigne
       </figcaption>
       <figcaption>
-        18,25€
+        22,90€
       </figcaption>
-    </figure>-->
+    </figure>
 
-    <!--Livre 84
+    <!--Livre 84-->
     <figure>
-      <a href="https://www.amazon.fr/reveille-pas-juge-qui-dort/dp/2213613389/ref=rtpb_1/257-9479405-0879257?_encoding=UTF8&pd_rd_i=2213613389&pd_rd_r=d6ee78b4-4b8c-4b8b-9c26-f3d2e246726f&pd_rd_w=yVHKy&pd_rd_wg=adqlh&pf_rd_p=11fd17e3-2e76-468d-ad1e-fcdf79abf9f0&pf_rd_r=WNFEY9JZD6FWWTG0GSWS&psc=1&refRID=WNFEY9JZD6FWWTG0GSWS"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/51VWSZ065EL.jpg" alt="On ne reveille pas un juge qui dort" class="books" /></a>
+      <a href="https://www.amazon.fr/volevo-diventare-realizzato-grazie-Gomorra/dp/8817089591/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=non+volevo+diventare&qid=1613398717&sr=8-1" target="_blank"> <img
+          src="https://images-na.ssl-images-amazon.com/images/I/91SZi-AVdhL.jpg" alt="Non volevo diventare un boss" class="books" /></a>
       <figcaption>
-        Gilbert Thiel
+        Salvatore Esposito
       </figcaption>
       <figcaption>
-        On ne reveille pas un juge qui dort
+        Non volevo diventare un boss
       </figcaption>
       <figcaption>
-        25,00€
+        18,00€
       </figcaption>
-    </figure>-->
+    </figure>
   </div>
 
   <div class="booksLine">
-    <!--Livre 81
+    <!--Livre 81-->
     <figure>
-      <a href="https://www.amazon.fr/Mafias-Gilbert-Thiel/dp/2213672512/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1594512282&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91ufrIUt51L.jpg" alt="Mafias"
-          class="books" /></a>
+      <a href="https://www.amazon.fr/Soit-je-gagne-soit-japprends/dp/2259278140/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=TE4E9I3PGN6J&dchild=1&keywords=alain+jakubowicz&qid=1613398739&sprefix=alain+ja%2Caps%2C149&sr=8-1"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61sZWNNFk1L.jpg" alt="Alain Jakubowicz" class="books" /></a>
       <figcaption>
-        Gilbert Thiel
+        Alain Jakubowicz
       </figcaption>
       <figcaption>
-        Mafias
+        Soit je gagne, soit j'apprends
       </figcaption>
       <figcaption>
-        22,00€
+        16,04€
       </figcaption>
-    </figure>-->
+    </figure>
 
-    <!--Livre 82
+    <!--Livre 82-->
     <figure>
-      <a href="https://www.amazon.fr/Jordan-Belfort-loup-Wall-Street/dp/2378150946/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=&sr=" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81ClhjnocnL.jpg"
-          alt="Vendre: Les secrets de ma méthode" class="books" /></a>
+      <a href="https://www.amazon.fr/LAdversaire-Emmanuel-Carr%C3%A8re/dp/2070416216/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=125N55NVIOZUU&dchild=1&keywords=l%27adversaire+emmanuel+carr%C3%A8re&qid=1613398755&sprefix=l%27adversaire%2Caps%2C152&sr=8-1"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71VcJJmP5kL.jpg" alt="L'Adversaire" class="books" /></a>
       <figcaption>
-        Jordan Belfort
+        Emmanuel Carrère
       </figcaption>
       <figcaption>
-        Vendre: Les secrets de ma méthode
+        L'Adversaire
       </figcaption>
       <figcaption>
-        17,90€
+        6,90€
       </figcaption>
-    </figure>-->
+    </figure>
 
-    <!--Livre 83
+    <!--Livre 83-->
     <figure>
-      <a href="https://www.amazon.fr/Cassez-baraque-Capitalisez-sur-passions/dp/2744067083/ref=pd_sim_nf_14_5/257-9479405-0879257?_encoding=UTF8&pd_rd_i=2744067083&pd_rd_r=74e18d95-1a65-4c61-890b-33b91d25f908&pd_rd_w=kYCPu&pd_rd_wg=7lqKc&pf_rd_p=989549ee-b4b9-468d-9113-731b03560554&pf_rd_r=R9FY5G6G9SM9S5Y5XKM6&psc=1&refRID=R9FY5G6G9SM9S5Y5XKM6"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81Tq4TVUGrL.jpg" alt="Cassez la baraque !" class="books" /></a>
+      <a href="https://www.amazon.fr/Divine-Com%C3%A9die-LEnfer-Dante/dp/2080712160/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=dante+enfer&qid=1613399153&sr=8-1" target="_blank"> <img
+          src="https://images-na.ssl-images-amazon.com/images/I/61xS1UMwZrL.jpg" alt="L'Enfer" class="books" /></a>
       <figcaption>
-        Gary Vaynerchuk
+        Dante
       </figcaption>
       <figcaption>
-        Cassez la baraque ! Capitalisez sur vos passions
+        L'Enfer
       </figcaption>
       <figcaption>
-        22,50€
+        10,0€
       </figcaption>
-    </figure>-->
+    </figure>
 
-    <!--Livre 84
+    <!--Livre 84-->
     <figure>
-      <a href="https://www.amazon.fr/L%C3%A9quilibre-est-courage-Pierre-Villiers/dp/2213717842/ref=sr_1_16?dchild=1&pf_rd_i=301061&pf_rd_p=2ae9d274-f85d-5302-a065-2b44b53e1f4d&pf_rd_r=BSAZRBNJCDJ4GGVZ9Q23&pf_rd_s=merchandised-search-10&pf_rd_t=BROWSE&qid=1605406820&refinements=p_72%3A184904031&s=books&sr=1-16"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/7123ejxMOoL.jpg" alt="L'équilibre est un courage" class="books" /></a>
+      <a href="https://www.amazon.fr/Mourad-Boudjellal-Jen-savais-trop/dp/2263172149/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=mourad+j%27en+savais+trop&qid=1613399144&sr=8-1" target="_blank"> <img
+          src="https://images-na.ssl-images-amazon.com/images/I/81WpAkF0vHL.jpg" alt="J'en savais trop" class="books" /></a>
       <figcaption>
-        Pierre de Villiers
+        Mourad Boudjellal
       </figcaption>
       <figcaption>
-        L'équilibre est un courage
+        J'en savais trop
       </figcaption>
       <figcaption>
-        22,50€
+        Pas disponible pour l'instant
       </figcaption>
-    </figure>-->
+    </figure>
   </div>
 
   <div class="booksLine">
