--- a/livres.html
+++ b/livres.html
@@ -1403,35 +1403,35 @@
   </div>
 
   <div class="booksLine">
-    <!--Livre 85
+    <!--Livre 85-->
     <figure>
-      <a href="https://www.amazon.fr/Friends-cuisine-officiel-Amanda-Yee/dp/B08FKLN24H/ref=sr_1_32?dchild=1&pf_rd_i=301061&pf_rd_p=2ae9d274-f85d-5302-a065-2b44b53e1f4d&pf_rd_r=BSAZRBNJCDJ4GGVZ9Q23&pf_rd_s=merchandised-search-10&pf_rd_t=BROWSE&qid=1605406857&refinements=p_72%3A184904031&s=books&sr=1-32"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71iD6X5q-hL.jpg" alt="Recettes Friends" class="books" /></a>
+      <a href="https://www.amazon.fr/Bleu-%C3%A0-l%C3%A2me-Nouvelle-%C3%A9dition/dp/2749168503/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=16QQCAFVLVNU2&dchild=1&keywords=dominici+christophe+livre&qid=1614189827&sprefix=dominici%2Caps%2C156&sr=8-1"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61J6e9WuVxL.jpg" alt="Dominici" class="books" /></a>
       <figcaption>
-        Friends
+        Christophe Dominici
       </figcaption>
       <figcaption>
-        Le livre de cuisine officiel
+        Bleu à l'âme
       </figcaption>
       <figcaption>
-        29,90€
+        18,90€
       </figcaption>
-    </figure>-->
+    </figure>
 
-    <!--Livre 86
+    <!--Livre 86-->
     <figure>
-      <a href="https://www.amazon.fr/Nature-humaine-Prix-Femina-2020/dp/2081433486/ref=sr_1_74?dchild=1&pf_rd_i=301061&pf_rd_p=2ae9d274-f85d-5302-a065-2b44b53e1f4d&pf_rd_r=BSAZRBNJCDJ4GGVZ9Q23&pf_rd_s=merchandised-search-10&pf_rd_t=BROWSE&qid=1605407011&refinements=p_72%3A184904031&s=books&sr=1-74"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61k3y90ergL.jpg" alt="Nature humaine" class="books" /></a>
+      <a href="https://www.amazon.fr/Deux-pieds-terre-Basile-Bure/dp/2080206427/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=basile+de+bure&qid=1614189550&sr=8-1"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61-R1igSvcL.jpg" alt="Deux pieds sur terre" class="books" /></a>
       <figcaption>
-        Serge Joncour
+        Basile de Bure
       </figcaption>
       <figcaption>
-        Nature humaine
+        Deux pieds sur terre
       </figcaption>
       <figcaption>
-        21,00€
+        20,90€
       </figcaption>
-    </figure>-->
+    </figure>
 
     <!--Livre 87
     <figure>
