--- a/livres.html
+++ b/livres.html
@@ -1311,16 +1311,16 @@
 
     <!--Livre 83-->
     <figure>
-      <a href="https://www.amazon.fr/Si-%C3%A7a-saigne-Stephen-King/dp/2226451056/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=1FH5YNL5U4ZVH&dchild=1&keywords=si+%C3%A7a+saigne+stephen+king&qid=1613398702&sprefix=si+%C3%A7a+%2Caps%2C156&sr=8-1"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81+5tjtuBBL.jpg" alt="Stephen King" class="books" /></a>
+      <a href="https://www.amazon.fr/%C3%87a-Coffret-tomes-Stephen-King/dp/2253083364/ref=sr_1_5?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=27L5MDQOGIMXZ&dchild=1&keywords=stephen+king+simetierre&qid=1616181524&sprefix=stephen+king+s%2Caps%2C155&sr=8-5"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71Y7PvGQYjL.jpg" alt="Ça (Coffret 2 tomes)" class="books" /></a>
       <figcaption>
         Stephen King
       </figcaption>
       <figcaption>
-        Si ça saigne
+        Ça (Coffret 2 tomes)
       </figcaption>
       <figcaption>
-        22,90€
+        19,90€
       </figcaption>
     </figure>
 
@@ -1494,7 +1494,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 91-->
+    <!--Livre 91
     <figure>
       <a href="https://www.amazon.fr/%C3%87a-Coffret-tomes-Stephen-King/dp/2253083364/ref=sr_1_5?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=27L5MDQOGIMXZ&dchild=1&keywords=stephen+king+simetierre&qid=1616181524&sprefix=stephen+king+s%2Caps%2C155&sr=8-5"
         target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71Y7PvGQYjL.jpg" alt="Ça (Coffret 2 tomes)" class="books" /></a>
@@ -1507,7 +1507,7 @@
       <figcaption>
         19,90€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 92
     <figure>
