--- a/livres.html
+++ b/livres.html
@@ -1309,7 +1309,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 83-->
+    <!--Livre 83
     <figure>
       <a href="https://www.amazon.fr/%C3%87a-Coffret-tomes-Stephen-King/dp/2253083364/ref=sr_1_5?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=27L5MDQOGIMXZ&dchild=1&keywords=stephen+king+simetierre&qid=1616181524&sprefix=stephen+king+s%2Caps%2C155&sr=8-5"
         target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71Y7PvGQYjL.jpg" alt="Ça (Coffret 2 tomes)" class="books" /></a>
@@ -1322,7 +1322,7 @@
       <figcaption>
         19,90€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 84-->
     <figure>
@@ -1494,35 +1494,35 @@
       </figcaption>
     </figure>
 
-    <!--Livre 91
+    <!--Livre 91-->
     <figure>
-      <a href="https://www.amazon.fr/%C3%87a-Coffret-tomes-Stephen-King/dp/2253083364/ref=sr_1_5?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=27L5MDQOGIMXZ&dchild=1&keywords=stephen+king+simetierre&qid=1616181524&sprefix=stephen+king+s%2Caps%2C155&sr=8-5"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71Y7PvGQYjL.jpg" alt="Ça (Coffret 2 tomes)" class="books" /></a>
+      <a href="https://www.amazon.fr/Linconnu-poste-Florence-Aubenas/dp/2823609857"
+        target="_blank"> <img src="https://www.amazon.fr/images/I/51atcRLnF9L.jpg" alt="L'inconnu de la poste" class="books" /></a>
       <figcaption>
-        Stephen King
+        Florence Aubenas
       </figcaption>
       <figcaption>
-        Ça (Coffret 2 tomes)
+        L'Inconnu de la poste
       </figcaption>
       <figcaption>
-        19,90€
+        19,00€
       </figcaption>
-    </figure>-->
+    </figure>
 
-    <!--Livre 92
+    <!--Livre 92-->
     <figure>
-      <a href="https://www.amazon.fr/3000-giorni-Juve-campione-dItalia/dp/8893883562/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1606989650&sr=8-2" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71Dys+JGVkL.jpg"
-          alt="3000 giorni" class="books" /></a>
+      <a href="https://www.amazon.fr/gp/product/2757820109/ref=dbs_a_def_rwt_bibl_vppi_i2" target="_blank"> <img src="https://www.amazon.fr/images/I/61QtjsXBRyL.jpg"
+          alt="La méprise. L'affaire d'Outreau" class="books" /></a>
       <figcaption>
-        Massimo Zampini
+        Florence Aubenas
       </figcaption>
       <figcaption>
-        3000 giorni con la Juve campione d'Italia
+        La méprise. L'affaire d'Outreau
       </figcaption>
       <figcaption>
-        18,00€
+        7,20€
       </figcaption>
-    </figure>-->
+    </figure>
   </div>
 
   <div class="booksLine">
@@ -1531,7 +1531,7 @@
       <a href="https://www.amazon.fr/principes-fondamentaux-%C3%A9checs-Jos%C3%A9-Capablanca/dp/2916340831/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=Les+principes+fondamentaux+aux+%C3%A9checs&qid=1605408386&s=books&sr=1-1"
         target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61wiKslr7hL.jpg" alt="Les principes fondamentaux des échecs" class="books" /></a>
       <figcaption>
-        José Raul Capablanca
+        Florence Aubenas
       </figcaption>
       <figcaption>
         Les principes fondamentaux des échecs
