--- a/livres.html
+++ b/livres.html
@@ -909,16 +909,16 @@
   <div class="booksLine">
     <!-- Livre 57-->
     <figure>
-      <a href="https://www.amazon.fr/Gagner-cest-simple-r%C3%A8gles-coaching/dp/2501147626/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=BLT3A07GWKSU&keywords=massimiliano+allegri&qid=1582479774&sprefix=massimil%2Caps%2C148&sr=8-1"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71lr6-gqfHL.jpg" alt="Allegri" class="books" /></a>
+      <a href="https://www.amazon.fr/%C3%88-molto-semplice-Massimiliano-Allegri/dp/8820067331/ref=sr_1_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=massimiliano+allegri&qid=1620833019&sr=8-2"
+        target="_blank"> <img src="https://www.amazon.fr/images/I/61mrlb0JSwL.jpg" alt="Allegri" class="books" /></a>
       <figcaption>
         Massimiliano Allegri
       </figcaption>
       <figcaption>
-        Gagner c'est si simple
+        È molto semplice
       </figcaption>
       <figcaption>
-        18,90€
+        19,90€
       </figcaption>
     </figure>
 
@@ -1526,97 +1526,97 @@
   </div>
 
   <div class="booksLine">
-    <!--Livre 93
+    <!--Livre 93-->
     <figure>
-      <a href="https://www.amazon.fr/principes-fondamentaux-%C3%A9checs-Jos%C3%A9-Capablanca/dp/2916340831/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=Les+principes+fondamentaux+aux+%C3%A9checs&qid=1605408386&s=books&sr=1-1"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61wiKslr7hL.jpg" alt="Les principes fondamentaux des échecs" class="books" /></a>
+      <a href="https://www.amazon.fr/Autobiographie-Guy-Noves/dp/2755647272/ref=msx_wsirn_v1_7?pd_rd_w=zK0Lz&pf_rd_p=0a0d9834-bf34-40cf-870c-8760e04a32b7&pf_rd_r=2493KAF559DDCRJK5T83&pd_rd_r=e97a429a-7bbb-471d-be84-0e4af5f6b738&pd_rd_wg=8EKy3&pd_rd_i=2755647272&psc=1"
+        target="_blank"> <img src="https://www.amazon.fr/images/I/71x-503xTML.jpg" alt="Guy Noves" class="books" /></a>
       <figcaption>
-        Florence Aubenas
+        Guy Noves
       </figcaption>
       <figcaption>
-        Les principes fondamentaux des échecs
+        La tête haute
       </figcaption>
       <figcaption>
-        15,00€
+        17,95€
       </figcaption>
-    </figure>-->
+    </figure>
 
-    <!--Livre 94
+    <!--Livre 94-->
     <figure>
-      <a href="https://www.amazon.fr/carri%C3%A8re-%C3%A9chiqu%C3%A9enne-Jose-Raul-Capablanca/dp/232209661X/ref=sr_1_9?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=2WIUY9RCKH7BO&dchild=1&keywords=jose+raul+capablanca&qid=1605408503&sprefix=jose+rau%2Cstripbooks%2C175&sr=8-9"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61Btuo81U3L.jpg" alt="Ma carrière échiquéenne" class="books" /></a>
+      <a href="https://www.amazon.fr/voulez-savoir-tactique-jamais-demander/dp/2501150120/ref=pd_rhf_ee_s_wsixnTransformerAudibleFR_4?pd_rd_w=nbrM2&pf_rd_p=7ac411ec-d63f-4ee4-a9b8-e03dca183d07&pf_rd_r=37CXRR8XJFC9MFW7PMV0&pd_rd_r=609d8572-65a3-44ae-8160-def601f84c5d&pd_rd_wg=YUxWd&pd_rd_i=2501150120&psc=1"
+        target="_blank"> <img src="https://www.amazon.fr/images/I/81ogj0F8jKS.jpg" alt="Tactique: Ecoles de jeu, préceptes et origines " class="books" /></a>
       <figcaption>
-        José-Raúl Capablanca
+        So Foot
       </figcaption>
       <figcaption>
-        Ma carrière échiquéenne
+        Tactique: Ecoles de jeu, préceptes et origines
       </figcaption>
       <figcaption>
-        18,00€
+        22,90€
       </figcaption>
-    </figure>-->
+    </figure>
 
-    <!--Livre 95
+    <!--Livre 95-->
     <figure>
-      <a href="https://www.amazon.fr/Churchill-Andrew-ROBERTS/dp/2262081190/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=churchill&qid=1605651658&sr=8-1" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/61XvcwjjMdL.jpg" alt="Churchill" class="books" /></a>
+      <a href="https://www.amazon.fr/grande-histoire-lafter-foot/dp/2755685816/ref=msx_wsirn_v1_4?pd_rd_w=RKiCG&pf_rd_p=0a0d9834-bf34-40cf-870c-8760e04a32b7&pf_rd_r=T2FZRTZMG7BETJQSDZ59&pd_rd_r=3837f6d2-23f1-47cd-9687-767bd921aec5&pd_rd_wg=q7ns2&pd_rd_i=2755685816&psc=1" target="_blank"> <img
+          src="https://www.amazon.fr/images/I/61UZTSI9uXL.jpg" alt="Génération After Foot" class="books" /></a>
       <figcaption>
-        Andrew Roberts
+        Pierre Adrian
       </figcaption>
       <figcaption>
-        Churchill
+        Génération After Foot
       </figcaption>
       <figcaption>
-        29,00€
+        17,50€
       </figcaption>
-    </figure>-->
+    </figure>
 
-    <!--Livre 96
+    <!--Livre 96-->
     <figure>
-      <a href="https://www.amazon.fr/3000-giorni-Juve-campione-dItalia/dp/8893883562/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1606989650&sr=8-2" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71Dys+JGVkL.jpg"
+      <a href="https://www.amazon.fr/Ho-visto-Diego-dico-vero/dp/8830901148/ref=pd_sim_7?pd_rd_w=S2kTy&pf_rd_p=3cf56746-caca-49ca-a035-b272242b29b5&pf_rd_r=H6CRY3DD42AN22SNXY7Z&pd_rd_r=b10de34c-44da-477d-949c-3ef90b39c9d2&pd_rd_wg=1Lp3W&pd_rd_i=8830901148&psc=1" target="_blank"> <img src="https://www.amazon.fr/images/I/91jRW4Kla1L.jpg"
           alt="3000 giorni" class="books" /></a>
       <figcaption>
-        Massimo Zampini
+        Ciro Ferrara
       </figcaption>
       <figcaption>
-        3000 giorni con la Juve campione d'Italia
+        Ho visto Diego e dico 'o vero
       </figcaption>
       <figcaption>
-        18,00€
+        16,00€
       </figcaption>
-    </figure>-->
+    </figure>
   </div>
 
   <div class="booksLine">
-    <!--Livre 97
+    <!--Livre 97-->
     <figure>
-      <a href="https://www.amazon.fr/principes-fondamentaux-%C3%A9checs-Jos%C3%A9-Capablanca/dp/2916340831/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=Les+principes+fondamentaux+aux+%C3%A9checs&qid=1605408386&s=books&sr=1-1"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61wiKslr7hL.jpg" alt="Les principes fondamentaux des échecs" class="books" /></a>
+      <a href="https://www.amazon.fr/Derri%C3%A8re-porte-verte-Bernard-LIONS/dp/226317463X/ref=msx_wsirn_v1_3?pd_rd_w=KBmBG&pf_rd_p=0a0d9834-bf34-40cf-870c-8760e04a32b7&pf_rd_r=TJ8W0C94D8VJAWGRRDJG&pd_rd_r=2ed4b53a-8dcb-44b2-ae20-3379c41da5fa&pd_rd_wg=1AeVK&pd_rd_i=226317463X&psc=1"
+        target="_blank"> <img src="https://www.amazon.fr/images/I/41by02c4o7L.jpg" alt="Derrière la porte verte" class="books" /></a>
       <figcaption>
-        José Raul Capablanca
+        Bernard Lions
       </figcaption>
       <figcaption>
-        Les principes fondamentaux des échecs
+        Derrière la porte verte
       </figcaption>
       <figcaption>
-        15,00€
+        17,90€
       </figcaption>
-    </figure>-->
+    </figure>
 
-    <!--Livre 98
+    <!--Livre 98-->
     <figure>
-      <a href="https://www.amazon.fr/carri%C3%A8re-%C3%A9chiqu%C3%A9enne-Jose-Raul-Capablanca/dp/232209661X/ref=sr_1_9?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=2WIUY9RCKH7BO&dchild=1&keywords=jose+raul+capablanca&qid=1605408503&sprefix=jose+rau%2Cstripbooks%2C175&sr=8-9"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61Btuo81U3L.jpg" alt="Ma carrière échiquéenne" class="books" /></a>
+      <a href="https://www.amazon.fr/vie-continue-Bernard-Pivot/dp/2226451323/ref=msx_wsirn_v1_2?pd_rd_w=KBmBG&pf_rd_p=0a0d9834-bf34-40cf-870c-8760e04a32b7&pf_rd_r=TJ8W0C94D8VJAWGRRDJG&pd_rd_r=2ed4b53a-8dcb-44b2-ae20-3379c41da5fa&pd_rd_wg=1AeVK&pd_rd_i=2226451323&psc=1"
+        target="_blank"> <img src="https://www.amazon.fr/images/I/71RcLpRTVaL.jpg" alt="... Mais la vie continue" class="books" /></a>
       <figcaption>
-        José-Raúl Capablanca
+        Bernard Pivot
       </figcaption>
       <figcaption>
-        Ma carrière échiquéenne
+        ... Mais la vie continue
       </figcaption>
       <figcaption>
-        18,00€
+        19,90€
       </figcaption>
-    </figure>-->
+    </figure>
 
     <!--Livre 99
     <figure>
