ajout livres + Ratchet

--- a/livres.html
+++ b/livres.html
@@ -1125,16 +1125,19 @@
 
     <!--Livre 71-->
     <figure>
-      <a href="https://www.amazon.fr/principes-fondamentaux-%C3%A9checs-Jos%C3%A9-Capablanca/dp/2916340831/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=Les+principes+fondamentaux+aux+%C3%A9checs&qid=1605408386&s=books&sr=1-1"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61wiKslr7hL.jpg" alt="Les principes fondamentaux des échecs" class="books" /></a>
+      <a href="https://www.amazon.fr/Passion-Absurde-Devorante-Guez-Olivier/dp/B0857C17X9/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=2LH4I2VJDQ6BZ&dchild=1&keywords=une+passion+absurde+et+d%C3%A9vorante%2C+ecrits+sur+le+football&qid=1623591544&sprefix=une+passion+absu%2Cstripbooks%2C152&sr=8-1"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/4151SlqB-LS.jpg" alt="Une passion absurde et dévorante" class="books" /></a>
       <figcaption>
-        José Raul Capablanca
+        Olivier Guez
       </figcaption>
       <figcaption>
-        Les principes fondamentaux des échecs
+        Une passion absurde et dévorante
       </figcaption>
       <figcaption>
-        15,00€
+        Ecrits sur le football
+      </figcaption>
+      <figcaption>
+        19,00€
       </figcaption>
     </figure>
 
@@ -1309,20 +1312,20 @@
       </figcaption>
     </figure>
 
-    <!--Livre 83
+    <!--Livre 83-->
     <figure>
-      <a href="https://www.amazon.fr/%C3%87a-Coffret-tomes-Stephen-King/dp/2253083364/ref=sr_1_5?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=27L5MDQOGIMXZ&dchild=1&keywords=stephen+king+simetierre&qid=1616181524&sprefix=stephen+king+s%2Caps%2C155&sr=8-5"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71Y7PvGQYjL.jpg" alt="Ça (Coffret 2 tomes)" class="books" /></a>
+      <a href="https://www.amazon.fr/Gr%C3%A9gory-machination-familiale-Patricia-Tourancheau/dp/2021389561/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=LDREYDMD7GUC&dchild=1&keywords=patricia+tourancheau&qid=1621266154&s=books&sprefix=patricia+toura%2Cstripbooks%2C155&sr=1-1"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/51yCusV24oL.jpg" alt="Grégory - La machination familiale" class="books" /></a>
       <figcaption>
-        Stephen King
+        Patricia Tourancheau
       </figcaption>
       <figcaption>
-        Ça (Coffret 2 tomes)
+        Grégory - La machination familiale
       </figcaption>
       <figcaption>
-        19,90€
+        18,00€
       </figcaption>
-    </figure>-->
+    </figure>
 
     <!--Livre 84-->
     <figure>
@@ -1618,67 +1621,70 @@
       </figcaption>
     </figure>
 
-    <!--Livre 99
+    <!--Livre 99-->
     <figure>
-      <a href="https://www.amazon.fr/Churchill-Andrew-ROBERTS/dp/2262081190/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=churchill&qid=1605651658&sr=8-1" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/61XvcwjjMdL.jpg" alt="Churchill" class="books" /></a>
+      <a href="https://www.amazon.fr/Messy-Kitchen-Deliciously-Fabulously-Copiously/dp/1682619389/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=renee+paquette&qid=1623591705&sr=8-1" target="_blank"> <img
+          src="https://images-na.ssl-images-amazon.com/images/I/81d-hgRC2eL.jpg" alt="Renee Paquette cuisine" class="books" /></a>
       <figcaption>
-        Andrew Roberts
+        Renee Paquette
       </figcaption>
       <figcaption>
-        Churchill
+        Messy In The Kitchen
       </figcaption>
       <figcaption>
-        29,00€
+        27,87€
       </figcaption>
-    </figure>-->
+    </figure>
 
-    <!--Livre 100
+    <!--Livre 100-->
     <figure>
-      <a href="https://www.amazon.fr/3000-giorni-Juve-campione-dItalia/dp/8893883562/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1606989650&sr=8-2" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71Dys+JGVkL.jpg"
-          alt="3000 giorni" class="books" /></a>
+      <a href="https://www.amazon.fr/tempo-lento-Giuliano-Sangiorgi/dp/880624910X/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=1220IKN4HM4FM&dchild=1&keywords=il+tempo+di+un+lento&qid=1623591754&sprefix=il+tempo+di+un+%2Caps%2C149&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61OIz+Sac7S.jpg"
+          alt="Il tempo di un lento" class="books" /></a>
       <figcaption>
-        Massimo Zampini
+        Giuliano Sangiorgi
       </figcaption>
       <figcaption>
-        3000 giorni con la Juve campione d'Italia
+        Il tempo di un lento
       </figcaption>
       <figcaption>
-        18,00€
+        17,00€
       </figcaption>
-    </figure>-->
+    </figure>
   </div>
 
   <div class="booksLine">
-    <!--Livre 101
+    <!--Livre 101-->
     <figure>
-      <a href="https://www.amazon.fr/principes-fondamentaux-%C3%A9checs-Jos%C3%A9-Capablanca/dp/2916340831/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=Les+principes+fondamentaux+aux+%C3%A9checs&qid=1605408386&s=books&sr=1-1"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61wiKslr7hL.jpg" alt="Les principes fondamentaux des échecs" class="books" /></a>
+      <a href="https://www.amazon.fr/M%C3%A9moires-flous-Jim-Carrey/dp/2021471128/ref=sr_1_18?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=jim+carrey&qid=1623591475&sr=8-18"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61hrgr9nyDL.jpg" alt="Jim Carrey" class="books" /></a>
       <figcaption>
-        José Raul Capablanca
+        Jim Carrey
       </figcaption>
       <figcaption>
-        Les principes fondamentaux des échecs
+        Mémoires flous
       </figcaption>
       <figcaption>
-        15,00€
+        19,00€
       </figcaption>
-    </figure>-->
+    </figure>
 
-    <!--Livre 102
+    <!--Livre 102-->
     <figure>
-      <a href="https://www.amazon.fr/carri%C3%A8re-%C3%A9chiqu%C3%A9enne-Jose-Raul-Capablanca/dp/232209661X/ref=sr_1_9?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=2WIUY9RCKH7BO&dchild=1&keywords=jose+raul+capablanca&qid=1605408503&sprefix=jose+rau%2Cstripbooks%2C175&sr=8-9"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61Btuo81U3L.jpg" alt="Ma carrière échiquéenne" class="books" /></a>
+      <a href="https://www.amazon.fr/36-Histoires-poulets-dindics-tueurs/dp/2757870971/ref=sr_1_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=LDREYDMD7GUC&dchild=1&keywords=patricia+tourancheau&qid=1621266154&s=books&sprefix=patricia+toura%2Cstripbooks%2C155&sr=1-2"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/51Ggoofn1yL.jpg" alt="Le 36 - Histoires de poulets, d'indics et de tueurs en série" class="books" /></a>
       <figcaption>
-        José-Raúl Capablanca
+        Patricia Tourancheau
       </figcaption>
       <figcaption>
-        Ma carrière échiquéenne
+        Le 36 - Histoires de poulets,
       </figcaption>
       <figcaption>
-        18,00€
+        d'indics et de tueurs en série
       </figcaption>
-    </figure>-->
+      <figcaption>
+        8,20€
+      </figcaption>
+    </figure>
 
     <!--Livre 103
     <figure>
