--- a/jeuxvideo.html
+++ b/jeuxvideo.html
@@ -22,16 +22,16 @@
 
   <div class="gamesLine">
 
-    <!--Jeu 1
+    <!--Jeu 1-->
     <figure>
-      <a href="*" target="_blank"> <img src="https://vignette.wikia.nocookie.net/crashban/images/f/fb/It%27s_about_time.png/revision/latest?cb=20200622174313" alt="Crash" class="game" /></a>
+        <a href="https://www.amazon.fr/Ratchet-Clank-Rift-Apart-PS5/dp/B08WQMRHPS/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=1NLKEKJTXLEH4&dchild=1&keywords=ratchet+et+clank+ps5&qid=1623600714&sprefix=ratchet%2Caps%2C169&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71sR60hYpbS._AC_SL1000_.jpg" alt="NBA 2K21" class="game" /></a>
       <figcaption>
-        Crash Bandicoot 4 : It's about time
+        Ratchet & Clank: Rift Apart
       </figcaption>
       <figcaption>
-        69,99 en précommande
+        61,99€
       </figcaption>
-    </figure>-->
+    </figure>
 
     <!--Jeu 2
     <figure>
