--- a/livres.html
+++ b/livres.html
@@ -77,7 +77,7 @@
         Il mio terzo tempo
       </figcaption>
       <figcaption>
-        15,00€
+        13,31€
       </figcaption>
     </figure>
   </div>
@@ -201,7 +201,7 @@
         Both Sides
       </figcaption>
       <figcaption>
-        15,26€
+        13,04€
       </figcaption>
     </figure>
   </div>
@@ -443,7 +443,7 @@
         sous une ombrelle trouée
       </figcaption>
       <figcaption>
-        8,50€
+        8,60€
       </figcaption>
     </figure>
 
@@ -458,7 +458,7 @@
         C'était bien
       </figcaption>
       <figcaption>
-        8,50€
+        8,60€
       </figcaption>
     </figure>
   </div>
@@ -493,7 +493,7 @@
         que cette vie fut belle
       </figcaption>
       <figcaption>
-        8,50€
+        8,60€
       </figcaption>
     </figure>
 
@@ -543,7 +543,7 @@
         La gloire de l'Empire
       </figcaption>
       <figcaption>
-        8,29€
+        12,90€
       </figcaption>
     </figure>
 
@@ -591,7 +591,7 @@
         Seul entre mers et ciels
       </figcaption>
       <figcaption>
-        8,90€
+        Rupture de Stock
       </figcaption>
     </figure>
   </div>
@@ -635,7 +635,10 @@
         Gary Vaynerchuk
       </figcaption>
       <figcaption>
-        Cassez la baraque ! Capitalisez sur vos passions
+        Cassez la baraque !
+      </figcaption>
+      <figcaption>
+        Capitalisez sur vos passions
       </figcaption>
       <figcaption>
         22,50€
@@ -670,7 +673,7 @@
         Diam's, autobiographie
       </figcaption>
       <figcaption>
-        7,40€
+        7,60€
       </figcaption>
     </figure>
 
@@ -685,7 +688,7 @@
         Mélanie, Française et musulmane
       </figcaption>
       <figcaption>
-        7,00€
+        7,20€
       </figcaption>
     </figure>
 
@@ -700,7 +703,7 @@
         Mon Monde
       </figcaption>
       <figcaption>
-        21,90€
+        Rupture de Stock
       </figcaption>
     </figure>
 
@@ -808,7 +811,10 @@
         Olivier de Kersauson
       </figcaption>
       <figcaption>
-        De l'urgent, du presque rien et du rien du tout
+        De l'urgent, du presque rien
+      </figcaption>
+      <figcaption>
+        et du rien du tout
       </figcaption>
       <figcaption>
         18,50€
@@ -960,10 +966,13 @@
         Dan Carter
       </figcaption>
       <figcaption>
-        Autobiographie d'une légende des All Blacks
+        Autobiographie d'une légende
       </figcaption>
       <figcaption>
-        7,50€
+        des All Blacks
+      </figcaption>
+      <figcaption>
+        15,09€
       </figcaption>
     </figure>
   </div>
@@ -1246,7 +1255,7 @@
         How a Person Became a User
       </figcaption>
       <figcaption>
-        23,42€
+        24,32€
       </figcaption>
     </figure>
 
@@ -1261,7 +1270,7 @@
         Abolish Silicon Valley
       </figcaption>
       <figcaption>
-        14,45€
+        13,19€
       </figcaption>
     </figure>
 
@@ -1276,7 +1285,7 @@
         Give People Money
       </figcaption>
       <figcaption>
-        15,13€
+        14,73€
       </figcaption>
     </figure>
   </div>
@@ -1355,7 +1364,7 @@
         Soit je gagne, soit j'apprends
       </figcaption>
       <figcaption>
-        16,04€
+        20,00€
       </figcaption>
     </figure>
 
@@ -1400,7 +1409,7 @@
         J'en savais trop
       </figcaption>
       <figcaption>
-        Pas disponible pour l'instant
+        18,90€
       </figcaption>
     </figure>
   </div>
@@ -1462,7 +1471,7 @@
         La Disparition
       </figcaption>
       <figcaption>
-        Rupture de Stock €
+        24,80€
       </figcaption>
     </figure>
   </div>
@@ -1493,7 +1502,7 @@
         Le leader tranquille
       </figcaption>
       <figcaption>
-        19,50€
+        9,50€
       </figcaption>
     </figure>
 
@@ -1523,7 +1532,7 @@
         La méprise. L'affaire d'Outreau
       </figcaption>
       <figcaption>
-        7,20€
+        Rupture de stock
       </figcaption>
     </figure>
   </div>
@@ -1552,7 +1561,10 @@
         So Foot
       </figcaption>
       <figcaption>
-        Tactique: Ecoles de jeu, préceptes et origines
+        Tactique: Ecoles de jeu
+      </figcaption>
+      <figcaption>
+        préceptes et origines
       </figcaption>
       <figcaption>
         22,90€
@@ -1632,7 +1644,7 @@
         Messy In The Kitchen
       </figcaption>
       <figcaption>
-        27,87€
+        21,35€
       </figcaption>
     </figure>
 
