--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
   </div>
 
   <p class="dateMAJ">
-    Mise à jour liste le 24 avril 2021
+    Mise à jour liste le 14 juin 2021
   </p>
   <p class="dateMAJ2">
-    Mise à jour prix le 22 novembre 2020
+    Mise à jour prix le 14 juin 2021
   </p>
 
 </body>
