--- a/autres.html
+++ b/autres.html
@@ -21,7 +21,7 @@
   </navbar>
 
   <div class="othersLine">
-    <!--Autres 1
+    <!--Autres 1-->
     <figure>
       <a href="https://www.amazon.fr/Kaamelott-Livres-lInt%C3%A9grale-s%C3%A9rie-Blu-ray/dp/B07F576MSG/?_encoding=UTF8&pd_rd_w=SlLqP&pf_rd_p=9c892acd-7567-4862-a77a-6ab6f5960ea7&pf_rd_r=H104HHPJPWY4VC3JYMHZ&pd_rd_r=9ff2c9ee-5959-4f8a-91d3-822cb4342857&pd_rd_wg=WvcTS&ref_=pd_gw_crs_zg_bs_405322" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61QFDgac5dL._AC_SL1000_.jpg"
           alt="Kaamelott" class="others" /></a>
@@ -29,36 +29,36 @@
         Kaamelott - l'intégrale en BluRay
       </figcaption>
       <figcaption>
-        91,57€
+        79,99€
       </figcaption>
-    </figure>-->
+    </figure>
 
-    <!--Autres 2
+    <!--Autres 2-->
     <figure>
-      <a href="https://www.amazon.fr/Thrones-Tr%C3%B4ne-Lint%C3%A9grale-Saisons-Blu-Ray/dp/B07SZBK3WR/?_encoding=UTF8&pd_rd_w=SlLqP&pf_rd_p=9c892acd-7567-4862-a77a-6ab6f5960ea7&pf_rd_r=H104HHPJPWY4VC3JYMHZ&pd_rd_r=9ff2c9ee-5959-4f8a-91d3-822cb4342857&pd_rd_wg=WvcTS&ref_=pd_gw_crs_zg_bs_405322" target="_blank"> <img
+      <a href="#" target="_blank"> <img
           src="https://images-na.ssl-images-amazon.com/images/I/715rGsf7GtL._AC_SL1000_.jpg" alt="GoT" class="others" /></a>
       <figcaption>
         Game of Thrones - l'intégrale en BluRay
       </figcaption>
       <figcaption>
-        111,99€
+        Indisponible pour l'instant
       </figcaption>
-    </figure>-->
+    </figure>
 
-    <!--Autres 3
+    <!--Autres 3-->
     <figure>
-      <a href="https://www.amazon.fr/Thrones-Tr%C3%B4ne-Lint%C3%A9grale-Saisons-Blu-Ray/dp/B07SZBK3WR/ref=sr_1_8?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=1VGZDA53QY49R&keywords=game+of+thrones&qid=1573230847&sprefix=game+of+t%2Caps%2C159&sr=8-8"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71Xza7-HIhL._SL1000_.jpg" alt="Intégrale GoT" class="others" /></a>
+      <a href="https://www.amazon.fr/Chernobyl-Blu-Ray-Jared-Harris/dp/B07SZGSXT3?pf_rd_p=eab93c21-6a33-4780-aa56-35c8fe5fc951&pd_rd_wg=srzCG&pf_rd_r=JRY7AN681R6AYFAFNDXQ&ref_=pd_gw_cr_simh&pd_rd_w=xJ0th&pd_rd_r=298834d5-8235-4e45-8dcb-0eda62497f72"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/51NHFmY-YcS._AC_SL1000_.jpg" alt="Intégrale Chernobyl" class="others" /></a>
       <figcaption>
-        Intégrale Game of Thrones
+        Intégrale Chernobyl
       </figcaption>
       <figcaption>
         Blu Ray
       </figcaption>
       <figcaption>
-        117,15€
+        16,22€
       </figcaption>
-    </figure>-->
+    </figure>
 
     <!--Autres 4
     <figure>
