--- a/jeuxvideo.html
+++ b/jeuxvideo.html
@@ -22,7 +22,7 @@
 
   <div class="gamesLine">
 
-    <!--Jeu 1-->
+    <!--Jeu 1
     <figure>
         <a href="https://www.amazon.fr/Ratchet-Clank-Rift-Apart-PS5/dp/B08WQMRHPS/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=1NLKEKJTXLEH4&dchild=1&keywords=ratchet+et+clank+ps5&qid=1623600714&sprefix=ratchet%2Caps%2C169&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71sR60hYpbS._AC_SL1000_.jpg" alt="NBA 2K21" class="game" /></a>
       <figcaption>
@@ -31,7 +31,7 @@
       <figcaption>
         61,99€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Jeu 2
     <figure>
