--- a/livres.html
+++ b/livres.html
@@ -1713,37 +1713,40 @@
       </figcaption>
     </figure>
 
-    <!--Livre 104
+    <!--Livre 104-->
     <figure>
-      <a href="https://www.amazon.fr/3000-giorni-Juve-campione-dItalia/dp/8893883562/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1606989650&sr=8-2" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71Dys+JGVkL.jpg"
-          alt="3000 giorni" class="books" /></a>
+      <a href="https://www.amazon.fr/Bob-Marley-fille-du-dictateur/dp/2246818753/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=MB09I0S2D5QE&dchild=1&keywords=anne+sophie+jahn&qid=1624447856&sprefix=anne+sophie+j%2Caps%2C152&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71NVsn1gv9L.jpg"
+          alt="La fille du dictateur" class="books" /></a>
       <figcaption>
-        Massimo Zampini
+        Anne-Sophie Jahn
       </figcaption>
       <figcaption>
-        3000 giorni con la Juve campione d'Italia
+        Bob Marley et la
       </figcaption>
       <figcaption>
-        18,00€
+        fille du dictateur
       </figcaption>
-    </figure>-->
+      <figcaption>
+        20,00€
+      </figcaption>
+    </figure>
   </div>
 
   <div class="booksLine">
-    <!--Livre 105
+    <!--Livre 105-->
     <figure>
-      <a href="https://www.amazon.fr/principes-fondamentaux-%C3%A9checs-Jos%C3%A9-Capablanca/dp/2916340831/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=Les+principes+fondamentaux+aux+%C3%A9checs&qid=1605408386&s=books&sr=1-1"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61wiKslr7hL.jpg" alt="Les principes fondamentaux des échecs" class="books" /></a>
+      <a href="https://www.amazon.fr/Carton-jaune-Nick-HORNBY/dp/2264051922/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1624447818&sr=8-1"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/6147rvzgulL.jpg" alt="Carton jaune" class="books" /></a>
       <figcaption>
-        José Raul Capablanca
+        Nick Hornby
       </figcaption>
       <figcaption>
-        Les principes fondamentaux des échecs
+        Carton jaune
       </figcaption>
       <figcaption>
-        15,00€
+        7,50€
       </figcaption>
-    </figure>-->
+    </figure>
 
     <!--Livre 106
     <figure>
