maj Nicolas Rey

--- a/livres.html
+++ b/livres.html
@@ -1748,20 +1748,20 @@
       </figcaption>
     </figure>
 
-    <!--Livre 106
+    <!--Livre 106-->
     <figure>
-      <a href="https://www.amazon.fr/carri%C3%A8re-%C3%A9chiqu%C3%A9enne-Jose-Raul-Capablanca/dp/232209661X/ref=sr_1_9?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=2WIUY9RCKH7BO&dchild=1&keywords=jose+raul+capablanca&qid=1605408503&sprefix=jose+rau%2Cstripbooks%2C175&sr=8-9"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61Btuo81U3L.jpg" alt="Ma carrière échiquéenne" class="books" /></a>
+      <a href="https://www.amazon.fr/MARGE-DERREUR-REY-NICOLAS/dp/B08VCJ1LZ7/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1626616403&sr=8-1"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/31MWx5CzjwS.jpg" alt="La marge d'ereur" class="books" /></a>
       <figcaption>
-        José-Raúl Capablanca
+        Nicolas Rey
       </figcaption>
       <figcaption>
-        Ma carrière échiquéenne
+        La Marge D'erreur
       </figcaption>
       <figcaption>
         18,00€
       </figcaption>
-    </figure>-->
+    </figure>
 
     <!--Livre 107
     <figure>
