--- a/livres.html
+++ b/livres.html
@@ -68,16 +68,16 @@
 
     <!--Livre 4-->
     <figure>
-      <a href="https://www.amazon.fr/tempo-calcio-valgono-stesse-regole/dp/8832963043/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1609030312&sr=8-2" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/815Jn4vXFBL.jpg"
-          alt="Il mio terzo tempo" class="books" /></a>
+      <a href="https://www.amazon.fr/MARGE-DERREUR-REY-NICOLAS/dp/B08VCJ1LZ7/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1626616403&sr=8-1"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/31MWx5CzjwS.jpg" alt="La marge d'ereur" class="books" /></a>
       <figcaption>
-        Claudio Marchisio
+        Nicolas Rey
       </figcaption>
       <figcaption>
-        Il mio terzo tempo
+        La Marge D'erreur
       </figcaption>
       <figcaption>
-        13,31€
+        18,00€
       </figcaption>
     </figure>
   </div>
@@ -1748,7 +1748,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 106-->
+    <!--Livre 106
     <figure>
       <a href="https://www.amazon.fr/MARGE-DERREUR-REY-NICOLAS/dp/B08VCJ1LZ7/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1626616403&sr=8-1"
         target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/31MWx5CzjwS.jpg" alt="La marge d'ereur" class="books" /></a>
@@ -1761,7 +1761,7 @@
       <figcaption>
         18,00€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 107
     <figure>
