--- a/autres.html
+++ b/autres.html
@@ -21,7 +21,7 @@
   </navbar>
 
   <div class="othersLine">
-    <!--Autres 1-->
+    <!--Autres 1
     <figure>
       <a href="https://www.amazon.fr/Kaamelott-Livres-lInt%C3%A9grale-s%C3%A9rie-Blu-ray/dp/B07F576MSG/?_encoding=UTF8&pd_rd_w=SlLqP&pf_rd_p=9c892acd-7567-4862-a77a-6ab6f5960ea7&pf_rd_r=H104HHPJPWY4VC3JYMHZ&pd_rd_r=9ff2c9ee-5959-4f8a-91d3-822cb4342857&pd_rd_wg=WvcTS&ref_=pd_gw_crs_zg_bs_405322" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61QFDgac5dL._AC_SL1000_.jpg"
           alt="Kaamelott" class="others" /></a>
@@ -31,7 +31,7 @@
       <figcaption>
         79,99€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Autres 2-->
     <figure>
