--- a/livres.html
+++ b/livres.html
@@ -757,16 +757,16 @@
 
     <!--Livre 47-->
     <figure>
-      <a href="https://www.amazon.fr/R%C3%A9volte-rebelles-sport-Maryse-Ewanje-epee/dp/2755643641/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=revolte+maryse&qid=1571667765&sr=8-1" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/71u1ZRMhMHL.jpg" alt="Révolte ! Les rebelles du sport" class="books" /></a>
+      <a href="https://www.amazon.fr/Carton-jaune-Nick-HORNBY/dp/2264051922/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1624447818&sr=8-1"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/6147rvzgulL.jpg" alt="Carton jaune" class="books" /></a>
       <figcaption>
-        Maryse Éwanjé-Épée
+        Nick Hornby
       </figcaption>
       <figcaption>
-        Révolte ! Les rebelles du sport
+        Carton jaune
       </figcaption>
       <figcaption>
-        29,95€
+        7,50€
       </figcaption>
     </figure>
 
@@ -1733,7 +1733,7 @@
   </div>
 
   <div class="booksLine">
-    <!--Livre 105-->
+    <!--Livre 105
     <figure>
       <a href="https://www.amazon.fr/Carton-jaune-Nick-HORNBY/dp/2264051922/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1624447818&sr=8-1"
         target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/6147rvzgulL.jpg" alt="Carton jaune" class="books" /></a>
@@ -1746,7 +1746,7 @@
       <figcaption>
         7,50€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 106
     <figure>
